syntax = "proto3";

                 package playerchoiceLocale;
service PlayerchoiceLocaleService {
 rpc createPlayerchoiceLocale (PlayerchoiceLocaleCreateInput) returns (PlayerchoiceLocale) {}
rpc playerchoiceLocales (findManyParams) returns (stream PlayerchoiceLocale) {}
rpc playerchoiceLocale (PlayerchoiceLocaleWhereUniqueInput) returns (PlayerchoiceLocale) {}
rpc updatePlayerchoiceLocale (PlayerchoiceLocaleUpdateInput) returns (PlayerchoiceLocale) {}
rpc deletePlayerchoiceLocale (PlayerchoiceLocaleWhereUniqueInput) returns (PlayerchoiceLocale) {} 
 }
message PlayerchoiceLocaleCreateInput {
string createdAt = 1;
string id = 2;
string updatedAt = 3;
};
message PlayerchoiceLocale {
string createdAt = 1;
string id = 2;
string updatedAt = 3;
};
message PlayerchoiceLocaleWhereUniqueInput {
string createdAt = 1;
string id = 2;
string updatedAt = 3;
};
message PlayerchoiceLocaleUpdateInput {
string createdAt = 1;
string id = 2;
string updatedAt = 3;
};
message findManyParams {

};